# novel_tools_gui

./: README.md  pyproject.toml
novel_tools_gui/: main.py
novel_tools_gui/views/: main_window.py  open_button.py
tests/: test_novel_tools_gui.py
